# duckalog

./: .gitignore  404.html  AGENTS.md  API_DOCUMENTATION_UPDATES.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTION_SECTION.md  IMPLEMENTATION_SUMMARY.md  README.md  TASK_COMPLETION_STATUS.md  debug_string.py  index.html  mkdocs.yml  mkdocs.yml.backup  objects.inv  openspec-change-analysis.md  pyproject.toml  search.json  sitemap.xml  test_cli_init.py  test_config_init.py  zensical.toml
.beads/: config.yaml  issues.jsonl
.execflow/: settings.yml
.memory/: main.md  state.yaml
SECURITY/: index.html
architecture/: index.html
best-practices-path-management/: index.html
code_review/: FINAL_CODE_REVIEW.md  codebase_analysis_report_mm.md  codebase_review_and_recommendations.md  deep-analysis-findings-gpt-2025-12-02.md  final_chief_expert_review.md  findings-20251202-union-bug.md
configuration-path-examples/: index.html
dependency-injection-guide/: index.html
docs/: PRD_Spec.md  SECURITY.md  architecture.md  best-practices-path-management.md  configuration-path-examples.md  dependency-injection-guide.md  documentation-duplication-policy.md  documentation-map.md  index.md  migration-path-resolution.md  migration-refactor-config-architecture.md  openspec_change_implementation_order.md  path-resolution-examples.md  path-resolution.md
documentation-duplication-policy/: index.html
documentation-map/: index.html
examples/: CONTRIBUTING.md  README.md  custom-filesystem-authentication.py  hierarchical-database-override.yaml  hierarchical-multi-level.yaml  index.html  (+3 more)
(+861 files in other folders)
